--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <footer style="background-color: chartreuse;"></footer>
     </div>
 
-<!--por subir a github-->
+<!--por subir-->
     
 </body>
 </html>
