Actualizacion de ejercicios pendientes

--- a/Ejercicio #1, digital postcard/Ejercicio #1, Digital postcard/intento #2/index.html
+++ b/Ejercicio #1, digital postcard/Ejercicio #1, Digital postcard/intento #2/index.html
@@ -16,18 +16,20 @@
                 <h1>My postcard</h1> 
             </div>
             
-            <div>
-                <div class="text">
-                    <p>Look how awaome! This is a <br> postcard that i ceeated using <br> HTML5 and CSS3 during my <br>4Geek Academy Couse! <br> <br> This is so Cool, cant wait to start <br> doing more stuff! </p>  
+            <div class="cuerpo">
+                <div class="cajatext">
+                    <p class="text">Look how awaome! This is a <br> postcard that i ceeated using <br> HTML5 and CSS3 during my <br>4Geek Academy Couse! <br> <br> This is so Cool, cant wait to start <br> doing more stuff! </p>  
                 </div>
-                <div class="input">
-                    <input type="Text" placeholder="Some text">
-                    <input type="text" placeholder="Some email">
-                    <input type="text" placeholder="Some something">
+                <div class="grupoinput">
+                    <input class="input" type="Text" placeholder="Some text" >
+                    <br>
+                    <input class="input" type="text" placeholder="Some email">
+                    <br>
+                    <input class="input" type="text" placeholder="Some something">
                 </div>
             </div>
-            <div>
-                <button class="buttom">Send my postcard</button>
+            <div class="buttom">
+                <button>Send my postcard</button>
             </div>
         </div>
     </div>
